--- a/package.json
+++ b/package.json
@@ -6,28 +6,27 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/index.ts",
+    "dev": "tsx --watch -r dotenv/config src/index.ts",
     "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@types/node": "^22.10.10",
-    "eslint": "^9.14.0",
-    "globals": "^15.12.0",
-    "nodemon": "^3.1.7",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "@eslint/js": "^9.37.0",
+    "@types/node": "^22.18.9",
+    "eslint": "^9.37.0",
+    "globals": "^15.15.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
     "@puregram/hear": "2.1.0-rc.1",
     "@puregram/scenes": "^2.0.1",
     "@puregram/session": "^3.2.4",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
+    "dotenv": "^16.6.1",
     "exceljs": "^4.4.0",
     "lowdb": "^7.0.1",
     "node-convert": "^0.1.1",
